--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ LANGUAGE_PREFERENCE_COOKIE_NAME=null
 LMS_BASE_URL=null
 LOGIN_URL=null
 LOGOUT_URL=null
+LOGO_WHITE_URL=https://ssau.ru/i/logo/logo-white-ru.svg
 MARKETING_SITE_BASE_URL=null
 ORDER_HISTORY_URL=null
 REFRESH_ACCESS_TOKEN_ENDPOINT=null
