--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ USER_SURVEY_COOKIE_NAME=null
 COOKIE_DOMAIN=null
 WELCOME_PAGE_SUPPORT_LINK=null
 INFO_EMAIL=''
-DISABLE_ENTERPRISE_LOGIN=''
+DISABLE_ENTERPRISE_LOGIN=true
 REGISTER_CONVERSION_COOKIE_NAME=null
 ENABLE_PROGRESSIVE_PROFILING=''
 MARKETING_EMAILS_OPT_IN=''
