--- a/.env.development
+++ b/.env.development
@@ -28,7 +28,7 @@ USER_SURVEY_COOKIE_NAME='openedx-user-survey-type'
 COOKIE_DOMAIN='localhost'
 WELCOME_PAGE_SUPPORT_LINK='http://localhost:1999/welcome'
 INFO_EMAIL='info@edx.org'
-DISABLE_ENTERPRISE_LOGIN=''
+DISABLE_ENTERPRISE_LOGIN=false
 REGISTER_CONVERSION_COOKIE_NAME='openedx-user-register-conversion'
 ENABLE_COPPA_COMPLIANCE=''
 MARKETING_EMAILS_OPT_IN=''
